[package]
name = "cardamom"
version = "0.1.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.8.3"
error-chain = "0.12.4"
log = "0.4.14"
native-tls = "0.2.7"
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
reqwest = "0.11.2"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.4.0", features = ["full"] }
toml = "0.5.8"
url = "2.2.1"
